test/lastuse9_2.slq

def main(){
	x:=0:ğ”¹;
	y:=H(0:ğ”¹); /// error
	if x{ x=y; }
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	return y; /// error
}
